--- a/style.css
+++ b/style.css
@@ -1,1 +1,173 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.placer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+:root {
+  --text-color-1: #fff;
+  --text-color-2: #050B20;
+  --text-color-3: #405FF2;
+  --blur-1: #ffffff26;
+}
+
+.big-boss-header {
+  width: 100%;
+  height: auto;
+  padding: 20px;
+  background: url(./img/cars-img/9fa419ec2abcb24a9fc1024787f16aaa.jpg);
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-position: center;
+  flex-direction: column;
+}
+.big-boss-header header {
+  width: 95%;
+  max-width: 1400px;
+  height: 100px;
+  justify-content: space-between;
+  color: #fff;
+}
+.big-boss-header header .header-logo h1 {
+  font-size: 40px;
+}
+.big-boss-header header .header-elements {
+  flex: 1;
+  justify-content: end;
+  gap: 20px;
+}
+.big-boss-header header .header-elements a {
+  color: var(--text-color-1);
+  transition: 0.3s ease;
+}
+.big-boss-header header .header-elements a .bx {
+  transition: 0.3s ease;
+}
+.big-boss-header header .header-elements a:hover {
+  color: var(--text-color-3);
+}
+.big-boss-header header .header-elements a:hover .bx {
+  transform: rotate(90deg);
+}
+.big-boss-header header .header-elements .header-elements-btn {
+  width: 170px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: var(--text-color-3);
+  color: var(--text-color-1);
+  border: 2px solid var(--text-color-3);
+  transition: 0.3s ease;
+}
+.big-boss-header header .header-elements .header-elements-btn:hover {
+  background: none;
+  cursor: pointer;
+}
+.big-boss-header header .header-elements .header-elements-btn:hover a {
+  color: var(--text-color-3);
+}
+.big-boss-header .header-main {
+  width: 95%;
+  max-width: 1400px;
+  height: 100%;
+  flex-direction: column;
+}
+.big-boss-header .header-main .header-main-head {
+  width: 100%;
+  max-width: 1400px;
+  height: auto;
+  padding: 50px;
+  color: var(--text-color-1);
+  flex-direction: column;
+  gap: 20px;
+}
+.big-boss-header .header-main .header-main-head h1 {
+  font-size: 55px;
+}
+.big-boss-header .header-main .header-main-main {
+  width: 100%;
+  height: auto;
+  padding: 50px;
+  flex-direction: column;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-head {
+  width: 100%;
+  padding: 25px;
+  gap: 30px;
+  position: relative;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-head a {
+  color: var(--text-color-1);
+  display: flex;
+  flex-direction: column;
+  transition: 0.3s ease;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-head a:hover {
+  transform: scale(1.5);
+}
+.big-boss-header .header-main .header-main-main .header-main-main-main {
+  width: 60%;
+  height: 70px;
+  background-color: var(--blur-1);
+  border: 1px solid var(--blur-1);
+  border-radius: 50px;
+  justify-content: space-around;
+  padding: 10px;
+  gap: 10px;
+  transition: 0.3s ease;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child {
+  flex: 1;
+  height: 100%;
+  border-radius: 40px;
+  background-color: var(--blur-1);
+  border: 1px solid var(--blur-1);
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child h1 {
+  font-size: 20px;
+  color: var(--text-color-1);
+}
+.big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child:nth-child(5) {
+  background-color: var(--text-color-3);
+  flex: 1.5;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child:nth-child(5):hover {
+  background-color: var(--blur-1);
+  border: 1px solid var(--text-color-3);
+  flex: 1.5;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child:hover {
+  flex: 1.5;
+}
+.big-boss-header .header-main .header-main-main .header-main-main-main:hover {
+  width: 75%;
+}
+.big-boss-header .header-main .header-main-footer {
+  width: 60%;
+  height: auto;
+  padding: 20px;
+  flex-direction: column;
+  color: var(--text-color-1);
+}
+.big-boss-header .header-main .header-main-footer .header-main-footer-head h1 {
+  font-size: 20px;
+  font-weight: 300;
+}
+.big-boss-header .header-main .header-main-footer .header-main-footer-main placer .header-main-footer-main-child {
+  width: 100px;
+  height: 50px;
+  background-color: var(--blur-1);
+}
+.big-boss-header .header-main .header-main-footer .header-main-footer-main placer .header-main-footer-main-child h1 {
+  font-size: 10px;
+}/*# sourceMappingURL=style.css.map */
