--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@
 
 :root {
   --text-color-1: #fff;
-  --text-color-2: #050B20;
-  --text-color-3: #405FF2;
+  --text-color-2: #050b20;
+  --text-color-3: #405ff2;
   --blur-1: #ffffff26;
+  --blur-2: #ffffff70;
 }
 
 .big-boss-header {
@@ -29,6 +30,7 @@
      object-fit: cover;
   background-position: center;
   flex-direction: column;
+  background-repeat: no-repeat;
 }
 .big-boss-header header {
   width: 95%;
@@ -48,6 +50,7 @@
 .big-boss-header header .header-elements a {
   color: var(--text-color-1);
   transition: 0.3s ease;
+  font-size: 20px;
 }
 .big-boss-header header .header-elements a .bx {
   transition: 0.3s ease;
@@ -59,7 +62,7 @@
   transform: rotate(90deg);
 }
 .big-boss-header header .header-elements .header-elements-btn {
-  width: 170px;
+  width: 150px;
   height: 50px;
   border-radius: 25px;
   background-color: var(--text-color-3);
@@ -67,12 +70,105 @@
   border: 2px solid var(--text-color-3);
   transition: 0.3s ease;
 }
+.big-boss-header header .header-elements .header-elements-btn a {
+  font-size: 18px;
+}
 .big-boss-header header .header-elements .header-elements-btn:hover {
   background: none;
   cursor: pointer;
 }
 .big-boss-header header .header-elements .header-elements-btn:hover a {
   color: var(--text-color-3);
+}
+.big-boss-header header .header-elements .flex-menu {
+  display: none;
+  cursor: pointer;
+}
+.big-boss-header header .header-elements .flex-menu .bx {
+  font-size: 50px;
+}
+.big-boss-header header .header-elements .menu-siderbar {
+  max-width: 400px;
+  width: 300px;
+  height: 100vh;
+  position: absolute;
+  z-index: 100;
+  background-color: #fff;
+  flex-direction: column;
+  gap: 30px;
+  padding: 20px;
+  bottom: 0;
+  position: fixed;
+  right: -300px;
+  transition: 0.3s ease;
+  justify-content: space-evenly;
+}
+.big-boss-header header .header-elements .open-sidebar-l {
+  right: 0px;
+}
+.big-boss-header header .header-elements .logo-2 {
+  color: red;
+}
+.big-boss-header header .header-elements .logo-2 img {
+  height: 50px;
+}
+.big-boss-header header .header-elements .logo-2 h1 {
+  font-size: 20px;
+}
+.big-boss-header header .header-elements .menu-main {
+  width: 90%;
+  height: 80%;
+  border: 1px solid #ddd;
+  flex-direction: column;
+  gap: 50px;
+  align-items: start;
+  padding: 0 0 0 50px;
+}
+.big-boss-header header .header-elements .menu-main a {
+  color: black;
+  font-size: 20px;
+  font-weight: 600;
+  transition: 0.3s ease;
+}
+.big-boss-header header .header-elements .menu-main a:hover {
+  color: red;
+  transform: translateX(10%);
+}
+@media (max-width: 1200px) {
+  .big-boss-header header .header-logo h1 {
+    font-size: 35px;
+  }
+  .big-boss-header header .header-elements {
+    gap: 15px;
+  }
+  .big-boss-header header .header-elements a {
+    font-size: 19px;
+  }
+  .big-boss-header header .header-elements .header-elements-btn {
+    width: 130px;
+  }
+  .big-boss-header header .header-elements .header-elements-btn a {
+    font-size: 15px;
+  }
+}
+@media (max-width: 992px) {
+  .big-boss-header header .header-logo h1 {
+    font-size: 30px;
+  }
+  .big-boss-header header .header-elements a {
+    display: none;
+  }
+  .big-boss-header header .header-elements .header-elements-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .big-boss-header header .header-elements .header-elements-btn a {
+    display: flex;
+  }
+  .big-boss-header header .header-elements .flex-menu {
+    display: flex;
+  }
 }
 .big-boss-header .header-main {
   width: 95%;
@@ -84,7 +180,7 @@
   width: 100%;
   max-width: 1400px;
   height: auto;
-  padding: 50px;
+  padding: 150px 0 0 0;
   color: var(--text-color-1);
   flex-direction: column;
   gap: 20px;
@@ -134,7 +230,8 @@
   transition: 0.3s ease;
 }
 .big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child h1 {
-  font-size: 20px;
+  font-size: 17px;
+  font-weight: 500;
   color: var(--text-color-1);
 }
 .big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child:nth-child(5) {
@@ -151,6 +248,18 @@
 }
 .big-boss-header .header-main .header-main-main .header-main-main-main:hover {
   width: 75%;
+  background-color: var(--blur-1);
+}
+@media (max-width: 1200px) {
+  .big-boss-header .header-main .header-main-main .header-main-main-main {
+    width: 80%;
+  }
+  .big-boss-header .header-main .header-main-main .header-main-main-main .header-main-main-main-desktop-child h1 {
+    font-size: 16px;
+  }
+  .big-boss-header .header-main .header-main-main .header-main-main-main:hover {
+    width: 90%;
+  }
 }
 .big-boss-header .header-main .header-main-footer {
   width: 60%;
@@ -159,15 +268,34 @@
   flex-direction: column;
   color: var(--text-color-1);
 }
+.big-boss-header .header-main .header-main-footer .header-main-footer-head {
+  padding: 20px 0 50px 0;
+}
 .big-boss-header .header-main .header-main-footer .header-main-footer-head h1 {
   font-size: 20px;
   font-weight: 300;
 }
-.big-boss-header .header-main .header-main-footer .header-main-footer-main placer .header-main-footer-main-child {
-  width: 100px;
+.big-boss-header .header-main .header-main-footer .header-main-footer-main {
+  gap: 10px;
+  width: 100%;
+}
+.big-boss-header .header-main .header-main-footer .header-main-footer-main .header-main-footer-main-child {
+  flex: 1;
   height: 50px;
   background-color: var(--blur-1);
+  border-radius: 25px;
+  transition: 0.3s ease;
 }
-.big-boss-header .header-main .header-main-footer .header-main-footer-main placer .header-main-footer-main-child h1 {
-  font-size: 10px;
+.big-boss-header .header-main .header-main-footer .header-main-footer-main .header-main-footer-main-child h1 {
+  font-size: 18px;
+  font-weight: 500;
+}
+.big-boss-header .header-main .header-main-footer .header-main-footer-main .header-main-footer-main-child:hover {
+  flex: 1.5;
+  cursor: pointer;
+}
+@media (max-width: 1200px) {
+  .big-boss-header .header-main .header-main-footer {
+    width: 90%;
+  }
 }/*# sourceMappingURL=style.css.map */
