--- a/style.scss
+++ b/style.scss
@@ -1,28 +1,40 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
     border: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;
 }
 
-.placer{
+.placer {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-:root{
+:root {
     --text-color-1: #fff;
-    --text-color-2: #050B20;
-    --text-color-3: #405FF2;
+    --text-color-2: #050b20;
+    --text-color-3: #405ff2;
     --blur-1: #ffffff26;
+    --blur-2: #ffffff70;
 }
 
 $max-width: 1400px;
 
-.big-boss-header{
+.big-boss-header {
     width: 100%;
     height: auto;
     padding: 20px;
@@ -30,85 +42,201 @@ $max-width: 1400px;
     object-fit: cover;
     background-position: center;
     flex-direction: column;
+    background-repeat: no-repeat;
 
-    header{
+    header {
         width: 95%;
         max-width: $max-width;
         height: 100px;
         justify-content: space-between;
         color: #fff;
 
-        .header-logo{
-            h1{
+        .header-logo {
+            h1 {
                 font-size: 40px;
             }
         }
 
-        .header-elements{
+        .header-elements {
             flex: 1;
             justify-content: end;
             gap: 20px;
-            
-            a{
+
+            a {
                 color: var(--text-color-1);
                 transition: 0.3s ease;
-                
-                .bx{
+                font-size: 20px;
+
+                .bx {
                     transition: 0.3s ease;
                 }
             }
 
-            a:hover{
+            a:hover {
                 color: var(--text-color-3);
 
-                .bx{
+                .bx {
                     transform: rotate(90deg);
                 }
             }
 
-            .header-elements-btn{
-                width: 170px;
+            .header-elements-btn {
+                width: 150px;
                 height: 50px;
                 border-radius: 25px;
                 background-color: var(--text-color-3);
                 color: var(--text-color-1);
                 border: 2px solid var(--text-color-3);
                 transition: 0.3s ease;
+                a {
+                    font-size: 18px;
+                }
             }
 
-            .header-elements-btn:hover{
+            .header-elements-btn:hover {
                 background: none;
                 cursor: pointer;
             }
 
-            .header-elements-btn:hover{
-                a{
+            .header-elements-btn:hover {
+                a {
                     color: var(--text-color-3);
+                }
+            }
+
+            .flex-menu{
+                display: none;
+                cursor: pointer;
+                .bx{
+                    font-size: 50px;
+                }
+            }
+
+            .menu-siderbar {
+                max-width: 400px;
+                width: 300px;
+                height: 100vh;
+                position: absolute;
+                z-index: 100;
+                background-color: #fff;
+                flex-direction: column;
+                gap: 30px;
+                padding: 20px;
+                bottom: 0;
+                position: fixed;
+                right: -300px;
+                transition: 0.3s ease;
+                justify-content: space-evenly;
+            }
+
+            .open-sidebar-l {
+                right: 0px;
+            }
+
+            .logo-2 {
+                color: red;
+            }
+
+            .logo-2 img {
+                height: 50px;
+            }
+
+            .logo-2 h1 {
+                font-size: 20px;
+            }
+
+            .menu-main {
+                width: 90%;
+                height: 80%;
+                border: 1px solid #ddd;
+                flex-direction: column;
+                gap: 50px;
+                align-items: start;
+                padding: 0 0 0 50px;
+            }
+
+            .menu-main a {
+                color: black;
+                font-size: 20px;
+                font-weight: 600;
+                transition: 0.3s ease;
+            }
+
+            .menu-main a:hover {
+                color: red;
+                transform: translateX(10%);
+            }
+        }
+
+        @media (max-width: 1200px) {
+            .header-logo {
+                h1 {
+                    font-size: 35px;
+                }
+            }
+
+            .header-elements {
+                gap: 15px;
+                a {
+                    font-size: 19px;
+                }
+
+                .header-elements-btn {
+                    width: 130px;
+                    a {
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+
+        @media (max-width: 992px) {
+            .header-logo {
+                h1 {
+                    font-size: 30px;
+                }
+            }
+
+            .header-elements {
+                a {
+                    display: none;
+                }
+                .header-elements-btn {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    a {
+                        display: flex;
+                    }
+                }
+
+                .flex-menu{
+                    display: flex;
                 }
             }
         }
     }
 
-    .header-main{
+    .header-main {
         width: 95%;
         max-width: $max-width;
         height: 100%;
         flex-direction: column;
 
-        .header-main-head{
+        .header-main-head {
             width: 100%;
             max-width: $max-width;
             height: auto;
-            padding: 50px;
+            padding: 150px 0 0 0;
             color: var(--text-color-1);
             flex-direction: column;
             gap: 20px;
-            h1{
+            h1 {
                 font-size: 55px;
             }
         }
 
-        .header-main-main{
+        .header-main-main {
             width: 100%;
             height: auto;
             padding: 50px;
@@ -119,20 +247,20 @@ $max-width: 1400px;
                 padding: 25px;
                 gap: 30px;
                 position: relative;
-                
-                a{
+
+                a {
                     color: var(--text-color-1);
                     display: flex;
                     flex-direction: column;
                     transition: 0.3s ease;
                 }
 
-                a:hover{
+                a:hover {
                     transform: scale(1.5);
                 }
             }
 
-            .header-main-main-main{
+            .header-main-main-main {
                 width: 60%;
                 height: 70px;
                 background-color: var(--blur-1);
@@ -143,7 +271,7 @@ $max-width: 1400px;
                 gap: 10px;
                 transition: 0.3s ease;
 
-                .header-main-main-main-desktop-child{
+                .header-main-main-main-desktop-child {
                     flex: 1;
                     height: 100%;
                     border-radius: 40px;
@@ -152,58 +280,92 @@ $max-width: 1400px;
                     cursor: pointer;
                     transition: 0.3s ease;
 
-                    h1{
-                        font-size: 20px;
+                    h1 {
+                        font-size: 17px;
+                        font-weight: 500;
                         color: var(--text-color-1);
                     }
                 }
-                .header-main-main-main-desktop-child:nth-child(5){
+                .header-main-main-main-desktop-child:nth-child(5) {
                     background-color: var(--text-color-3);
                     flex: 1.5;
                 }
 
-                .header-main-main-main-desktop-child:nth-child(5):hover{
+                .header-main-main-main-desktop-child:nth-child(5):hover {
                     background-color: var(--blur-1);
                     border: 1px solid var(--text-color-3);
                     flex: 1.5;
-                    
                 }
 
-                .header-main-main-main-desktop-child:hover{
+                .header-main-main-main-desktop-child:hover {
                     flex: 1.5;
                 }
             }
 
-            .header-main-main-main:hover{
+            .header-main-main-main:hover {
                 width: 75%;
+                background-color: var(--blur-1);
+            }
+
+            @media (max-width: 1200px) {
+                .header-main-main-main {
+                    width: 80%;
+
+                    .header-main-main-main-desktop-child {
+                        h1 {
+                            font-size: 16px;
+                        }
+                    }
+                }
+
+                .header-main-main-main:hover {
+                    width: 90%;
+                }
             }
         }
 
-        .header-main-footer{
+        .header-main-footer {
             width: 60%;
             height: auto;
             padding: 20px;
             flex-direction: column;
             color: var(--text-color-1);
 
-            .header-main-footer-head{
-                h1{
+            .header-main-footer-head {
+                padding: 20px 0 50px 0;
+                h1 {
                     font-size: 20px;
                     font-weight: 300;
                 }
             }
 
-            .header-main-footer-main placer{
+            .header-main-footer-main {
+                gap: 10px;
+                width: 100%;
 
-                .header-main-footer-main-child{
-                    width: 100px;
+                .header-main-footer-main-child {
+                    flex: 1;
                     height: 50px;
                     background-color: var(--blur-1);
+                    border-radius: 25px;
+                    transition: 0.3s ease;
 
-                    h1{
-                        font-size: 10px;
+                    h1 {
+                        font-size: 18px;
+                        font-weight: 500;
                     }
                 }
+
+                .header-main-footer-main-child:hover {
+                    flex: 1.5;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        @media (max-width: 1200px) {
+            .header-main-footer {
+                width: 90%;
             }
         }
     }
