--- a/style.css
+++ b/style.css
@@ -31,18 +31,10 @@
   background-position: center;
   flex-direction: column;
   background-repeat: no-repeat;
-  position: relative;
-}
-.big-boss-header .position-video {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  position: absolute;
   z-index: 0;
+  background: url(img/cars-img/9fa419ec2abcb24a9fc1024787f16aaa.jpg);
 }
 .big-boss-header header {
-  z-index: 10;
   width: 95%;
   max-width: 1400px;
   height: 100px;
@@ -181,7 +173,7 @@
   }
 }
 .big-boss-header .header-main {
-  z-index: 10;
+  z-index: 100;
   width: 95%;
   max-width: 1400px;
   height: 100%;
@@ -312,6 +304,7 @@
 }
 
 main {
+  z-index: 101 !important;
   width: 100%;
   height: auto;
   flex-direction: column;
