--- a/style.scss
+++ b/style.scss
@@ -43,18 +43,10 @@ $max-width: 1400px;
     background-position: center;
     flex-direction: column;
     background-repeat: no-repeat;
-    position: relative;
-
-    .position-video{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        z-index: 0;
-    }
+    z-index: 0;
+    background: url(img/cars-img/9fa419ec2abcb24a9fc1024787f16aaa.jpg);
 
     header {
-        z-index: 10;
         width: 95%;
         max-width: $max-width;
         height: 100px;
@@ -228,7 +220,7 @@ $max-width: 1400px;
     }
 
     .header-main {
-        z-index: 10;
+        z-index: 100;
         width: 95%;
         max-width: $max-width;
         height: 100%;
@@ -384,6 +376,7 @@ $max-width: 1400px;
 
 
 main{
+    z-index: 101 !important;
     width: 100%;
     height: auto;
     flex-direction: column;
