--- a/style.scss
+++ b/style.scss
@@ -411,15 +411,15 @@ main{
 
         .expoler-premium-main{
             width: 100%;
-            height: 200px;
+            height: auto;
             padding: 20px;
             display: grid;
-            grid-template-columns: repeat(6, 1fr);
-            gap: 40px;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 20px;
 
             .brands-cards{
                 width: 100%;
-                height: 80%;
+                height: 150px;
                 flex-direction: column;
                 gap: 20px;
                 box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -445,7 +445,6 @@ main{
             }
         }
     }
-
     .explore-vehicles{
         width: 80%;
         max-width: $max-width;
@@ -681,5 +680,13 @@ main{
           .get-started:hover {
             background-color: #0056b3;
           }
+    }
+
+    @media(max-width:1200px) {
+        .expoler-premium{
+            .explore-vehicles-main{
+                grid-template-columns: repeat(4, 1fr);
+            }
+        }
     }
 }
